first commit by sasajy

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             <td class="icon bird">笹島碧</td>
             <td>商学部</td>
             <td>学部３年</td>
-            <td>フェンシング、温泉</td>
+            <td>フェンシング、スキー</td>
         </tr>
     </table>
 </body>
