--- a/index.html
+++ b/index.html
@@ -109,6 +109,12 @@
         <td>博士1年</td>
         <td>サッカー、建築</td>
       </tr>
+      <tr>
+        <td class="icon bird">岩崎一樹</td>
+        <td>理工学部</td>
+        <td>学部1年</td>
+        <td>ピアノ、ゲーム、ＤＴＭ作曲</td>
+      </tr>
     </table>
   </body>
 </html>
