first commit by Fukuda Koki

--- a/index.html
+++ b/index.html
@@ -115,6 +115,12 @@
         <td>学部1年</td>
         <td>ピアノ、ゲーム、ＤＴＭ作曲</td>
       </tr>
+      <tr>
+        <td class="icon bird">福田航希</td>
+        <td>理工学部</td>
+        <td>学部3年</td>
+        <td>ギター / バンド / カラオケ</td>
+      </tr>
     </table>
   </body>
 </html>
