--- a/index.html
+++ b/index.html
@@ -121,6 +121,12 @@
         <td>学部3年</td>
         <td>ギター / バンド / カラオケ</td>
       </tr>
+      <tr>
+        <td class="icon bird">瀧田彩乃</td>
+        <td>文学部</td>
+        <td>学部4年</td>
+        <td>ピアノ / 散歩　</td>
+      </tr>
     </table>
   </body>
 </html>
