--- a/index.html
+++ b/index.html
@@ -127,6 +127,12 @@
         <td>学部4年</td>
         <td>ピアノ / 散歩　</td>
       </tr>
+       <tr>
+        <td class="icon bird">劉　星洋</td>
+        <td>慶應義塾普通部</td>
+        <td>中学2年</td>
+        <td>テニス、Youtubeを見ること　</td>
+      </tr>
     </table>
   </body>
 </html>
