first commit by (丹羽隆文)

--- a/index.html
+++ b/index.html
@@ -133,6 +133,13 @@
         <td>中学2年</td>
         <td>テニス、Youtubeを見ること　</td>
       </tr>
+       <tr>
+        <td class="icon bird">丹羽　隆文</td>
+        <td>医学部</td>
+        <td>博士1年</td>
+        <td>ハンドボール / 水泳</td>
+      </tr>
+
     </table>
   </body>
 </html>
