--- a/index.html
+++ b/index.html
@@ -72,7 +72,6 @@
         <td>学部4年</td>
         <td>カラオケ/ミュージカル鑑賞</td>
       </tr>
-
       <tr>
         <td class="icon bird">織田　浩臣</td>
         <td>理工学部</td>
@@ -138,6 +137,12 @@
         <td>医学部</td>
         <td>博士1年</td>
         <td>ハンドボール / 水泳</td>
+      </tr>
+      <tr>
+        <td class="icon bird">白河　遥</td>
+        <td>文学部</td>
+        <td>学部２年</td>
+        <td>散歩 / 映画鑑賞</td>
       </tr>
 
     </table>
