first commit by (your name)

--- a/index.html
+++ b/index.html
@@ -144,7 +144,12 @@
         <td>学部２年</td>
         <td>散歩 / 映画鑑賞</td>
       </tr>
-
+      <tr>
+        <th>関琥太郎</th>
+        <th>理工学部</th>
+        <th>学部1年</th>
+        <th>散歩 / ドラマ鑑賞</th>
+      </tr>
     </table>
   </body>
 </html>
