--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
       </tr>
        <tr>
         <td class="icon bird">劉　星洋</td>
-        <td>慶應義塾普通部</td>
+        <td><font color="#0000ff">慶應義塾普通部</font></td>
         <td>中学2年</td>
         <td>テニス、Youtubeを見ること　</td>
       </tr>
