--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
         <td class="icon bird">劉　星洋</td>
         <td><font color="#0000ff">慶應義塾普通部</font></td>
         <td>中学2年</td>
-        <td>テニス、Youtubeを見ること　</td>
+        <th><font size="5" font color="#0cb0e0">テニス、Youtubeを見ること　</font></th>
       </tr>
        <tr>
         <td class="icon bird">丹羽　隆文</td>
