--- a/index.html
+++ b/index.html
@@ -128,9 +128,9 @@
       </tr>
        <tr>
         <td class="icon bird">劉　星洋</td>
-        <td><font color="#0000ff">慶應義塾普通部</font></td>
+        <th><font size="5" font color="#0000ff">慶應義塾普通部</font></th>
         <td>中学2年</td>
-        <th><font size="5" font color="#0cb0e0">テニス、Youtubeを見ること　</font></th>
+        <td><font color="#0cb0e0">テニス、Youtubeを見ること　</font></td>
       </tr>
        <tr>
         <td class="icon bird">丹羽　隆文</td>
