first commit by (your name)

--- a/index.html
+++ b/index.html
@@ -150,6 +150,12 @@
         <th>学部1年</th>
         <th>散歩 / ドラマ鑑賞</th>
       </tr>
+      <tr>
+        <td class="icon bird">童　国棟</td>
+        <td>理工学部</td>
+        <td>博士2年</td>
+        <td>バドミントン、スノボ、旅行</td>
+      </tr>
     </table>
   </body>
 </html>
