--- a/index.html
+++ b/index.html
@@ -1,104 +1,32 @@
+<!--参考 
+https://proengineer.internous.co.jp/content/columnfeature/3704
+
+-->
+
 <!DOCTYPE html>
-<html lang="en">
+<html>
+    <head>
+        <title>CT/Roentgen Implant Size Specifier</title>
+        
+    </head>
+    <body>
+        <form action="#" method="post" enctype="multipart/form-data">
+            <p>
+                CT or Roentgen<br>
+                <input type="checkbox" name="mode" value="CT">CT
+                <input type="checkbox" name="mode" value="Roentgen">Roentgen
+            </p>
+            <p>The part Images contain<br>
+                <input type="checkbox" name="part" value="hipBHA">hipBHA
+                <input type="checkbox" name="part" value="hipTHA">hipTHA
+                <input type="checkbox" name="part" value="knee">knee
+            </p>
+            <p>Images：<br><input type="file" id="upload" capture="camera" accept="image/*"></p>
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- CSSの読み込み -->
-    <link rel="stylesheet" href="main.css">
-    <title>AIC SIGメンバー リスト</title>
-</head>
+            <p><input type="submit" value="submit"></p>
+        </form>
+        <h1>
 
-<body>
-    <table>
-        <tr>
-            <th>お名前</th>
-            <th>学部</th>
-            <th>学年</th>
-            <th>趣味</th>
-        </tr>
-        <tr>
-            <td class="icon bird">塩田　勇人</td>
-            <td>理工学部</td>
-            <td>学部４年</td>
-            <td>サッカー / フットサル</td>
-        </tr>
-        <!-- 上記を参考に自分の情報を新しく追加してください -->
-        <tr>
-            <td class="icon bird">東原　弘起</td>
-            <td>経済学部</td>
-            <td>学部２年</td>
-            <td>洋ロック / EDM</td>
-        </tr>
-        <tr>
-            <td class="icon bird">髙師　亜由奈</td>
-            <td>理工学部</td>
-            <td>学部２年</td>
-            <td>音楽(作曲、演奏、鑑賞などなど) / 電車と飛行機</td>
-        </tr>
-        <tr>
-            <td class="icon bird">山内　彩可</td>
-            <td>理工学部</td>
-            <td>学部２年</td>
-            <td> カフェ巡り</td>
-        </tr>
-        <tr>
-            <td class="icon bird">關　夢乃</td>
-            <td>理工学部</td>
-            <td>学部２年</td>
-            <td>チェロ</td>
-        </tr>
-        <tr>
-            <td class="icon bird">原野　響</td>
-            <td>理工学部</td>
-            <td>学部３年</td>
-            <td>サッカー観戦/DTM作曲/お笑い</td>
-        </tr>
-        <tr>
-            <td class="icon bird">棟高　佑</td>
-            <td>理工学部</td>
-            <td>学部１年</td>
-            <td>囲碁 / 少林寺拳法部</td>
-        </tr>
-        <tr>
-            <th>長澤陸</th>
-            <th>法学部政治学科</th>
-            <th>学部二年</th>
-            <th>好きな音楽のソロギター、ソロピアノverをyoutubeで見る事、釣り</th>
-        </tr>
-        <tr>
-            <td>安部 綾音</td>
-            <td>理工学部</td>
-            <td>学部4年</td>
-            <td>カラオケ/ミュージカル鑑賞</td>
-        </tr>
-
-        <tr>
-            <td class="icon bird">織田　浩臣</td>
-            <td>理工学部</td>
-            <td>学部1年</td>
-            <td>サッカー / 将棋　/ 映画鑑賞</td>
-        </tr>  
-        <tr>
-            <td class="icon bird">吉田翔音</td>
-            <td>理工学部</td>
-            <td>学部3年</td>
-            <td>ラグビー</td>
-        </tr>
-        <tr>
-            <td class="icon bird">木下 翼</td>
-            <td>システムデザイン・マネジメント研究科</td>
-            <td>修士1年</td>
-            <td>ゴルフ、バドミントン、散歩</td>
-        </tr>
-        <tr>
-            <td class="icon bird">大澤　宜嵩</td>
-            <td>理工学部</td>
-            <td>学部1年</td>
-            <td>ゲーム、バイオリン</td>
-        </tr>
-    </table>
-</body>
-
+        </h1>
+    </body>
 </html>
