--- a/index.html
+++ b/index.html
@@ -126,13 +126,13 @@
         <td>学部4年</td>
         <td>ピアノ / 散歩　</td>
       </tr>
-       <tr>
+      <tr>
         <td class="icon bird">劉　星洋</td>
         <th><font size="3" font color="#0000ff">慶應義塾普通部</font></th>
         <td>中学2年</td>
         <td><font color="#0cb0e0">テニス、Youtubeを見ること　</font></td>
       </tr>
-       <tr>
+      <tr>
         <td class="icon bird">丹羽　隆文</td>
         <td>医学部</td>
         <td>博士1年</td>
@@ -155,6 +155,12 @@
         <td>理工学部</td>
         <td>博士2年</td>
         <td>バドミントン、スノボ、旅行</td>
+      </tr>
+      <tr>
+        <td>渡邉 謙吾</td>
+        <td>理工学部</td>
+        <td>学部4年</td>
+        <td>スポーツ観戦 / 映画鑑賞</td>
       </tr>
     </table>
   </body>
