Update index.html 自己紹介文を追加いたしました。ご確認お願いいたします。

--- a/index.html
+++ b/index.html
@@ -162,6 +162,14 @@
         <td>学部4年</td>
         <td>スポーツ観戦 / 映画鑑賞</td>
       </tr>
+      <tr>
+        <td class="icon bird">
+          <a href="https://bento.me/taksnr"> 玉城 円</a>
+        </td>
+        <td>商学部</td>
+        <td>学部3年</td>
+        <td>野球 / 水泳 / ポーカー</td>
+      </tr>
     </table>
   </body>
 </html>
